# TrashD-embedded-iot

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
freertos/: FreeRTOSConfig.h
libs/: CMakeLists.txt  CustomSPI.cpp  CustomSPI.h  DigitalGPIO.cpp  DigitalGPIO.h  LoRaSPI.cpp  LoRaSPI.h  TCPRequest.cpp  TCPRequest.h  WiFiConnection.cpp  WiFiConnection.h  lwipopts.h
libs/Drivers/VL53L1X/VL53L1X_UltraLowPower_Driver/: VL53L1X_ULP_api.c  VL53L1X_ULP_api.h
libs/Drivers/VL53L1X/VL53L1X_UltraLowPower_Platform/: VL53L1X_ULP_platform.c  VL53L1X_ULP_platform.h
lorawan-lib/: CMakeLists.txt  loraconfig.h
lorawan-lib/boards/rp2040/: eeprom-board.c
